test/good/automatic/extension/array/without_input/ret_zero/0001.lat
int main() {
    int[] a = new int[3];

    for(int b : a) {
      printInt(b);
      b = 10;
      printInt(b);
    }

    for(int b : a) {
      printInt(b);
    }

    return 0;
}
