test/bad/automatic/extension/mixed/compile_time/0005.lat
class andrzej {
    int a;
}

class waldemar extends andrzej {
   int b;
}

int main() {
   andrzej[] a = new andrzej[10];
   waldemar[] b = new waldemar[10];
   a = b;
   return 0;
}
